[tool.poetry]
name = "emailtrade"
version = "0.2.0"
description = "Start trades automatically absed on tradingview alert emails"
authors = ["Trent N <tavn1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imapclient = "^2.1.0"
python-bittrex = "^0.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
